fix(main.css): another potential dark mode fix

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -3,6 +3,7 @@ body {
     font-weight: 400;
     font-size: 20px;
     background-color: #efe6d7;
+    color: var(--default-text-color);
 
     @media screen and (prefers-color-scheme: dark) {
         color: #eee;
